--- a/app/template/styles/sass/style.sass
+++ b/app/template/styles/sass/style.sass
@@ -4,15 +4,29 @@
 
 /* Including fonts */
 @font-face
-	src: url('../../fonts/')
-	font-family: 
-	font-weight: 
+	src: url('../../fonts/BebasNeueBold.ttf')
+	font-family: 'Bebas'
+
+@font-face
+	src: url('../../fonts/MyriadProCond.ttf')
+	font-family: 'MyriadProCond'
+
+@font-face
+	src: url('../../fonts/AGOpus.ttf')
+	font-family: 'AGOpus'
+
+@font-face
+	src: url('../../fonts/ArialMT.ttf')
+	font-family: 'ArialMT'
 
 
 
 /* Global settings */
-$font-size: 16px
-$font-family-1: 'Tahoma', sans-serif
+$font-size: 25px
+$font-family-1: 'Bebas', sans-serif
+$font-family-2: 'MyriadProCond', sans-serif
+$font-family-3: 'AGOpus', sans-serif
+$font-family-4: 'ArialMT', sans-serif
 $color-1: #000
 
 
@@ -73,7 +87,7 @@ img
 /* Grid */
 .container
 	position: relative
-	width: (1140px + 30px)
+	width: (1000px + 30px)
 	padding-left: 15px
 	padding-right: 15px
 
