--- a/app/template/styles/css/style.css
+++ b/app/template/styles/css/style.css
@@ -5,8 +5,14 @@
   font-family: 'Bebas'; }
 
 @font-face {
-  src: url("../../fonts/MyriadProCond.ttf");
-  font-family: 'MyriadProCond'; }
+  src: url("../../fonts/MyriadProNormalCond.otf");
+  font-family: 'Myriad Pro';
+  font-weight: 400; }
+
+@font-face {
+  src: url("../../fonts/MyriadProBoldCond.ttf");
+  font-family: 'Myriad Pro';
+  font-weight: 700; }
 
 @font-face {
   src: url("../../fonts/AGOpus.ttf");
@@ -165,3 +171,345 @@ img {
 .center, .container {
   margin-left: auto;
   margin-right: auto; }
+
+.triangles-after {
+  position: relative; }
+  .triangles-after:after {
+    z-index: 5;
+    position: absolute;
+    content: '';
+    width: 100%;
+    height: 31px;
+    bottom: -16px;
+    background: url("../../img/triangles.png") center; }
+
+.panel {
+  z-index: 100;
+  padding-top: 13px;
+  padding-bottom: 4px;
+  font-size: 25px;
+  position: fixed;
+  width: 100%;
+  left: 0;
+  top: 0;
+  background: white; }
+  .panel__nav {
+    margin-right: 16px;
+    padding-top: 7px; }
+    .panel__nav li {
+      margin-left: 14px;
+      margin-right: 14px; }
+  .panel__nav, .panel__phone {
+    position: relative;
+    z-index: 6; }
+
+.phone img {
+  position: relative;
+  top: -2px;
+  margin-right: 4px; }
+
+.phone img, .phone a {
+  display: inline-block;
+  vertical-align: middle; }
+
+.header {
+  position: relative;
+  z-index: 3;
+  color: white;
+  padding-top: 85px;
+  padding-bottom: 52px;
+  margin-top: 59px;
+  background: url("../../img/header.png") no-repeat center top; }
+  .header__logo {
+    z-index: 1;
+    position: absolute;
+    top: -65px;
+    left: 26px; }
+  .header__title {
+    padding-top: 100px;
+    margin-left: 13px; }
+    .header__title p {
+      background: rgba(255, 255, 255, 0.25);
+      padding: 19px 15px 12px; }
+      .header__title p:nth-of-type(1) {
+        width: 600px;
+        font-size: 56px;
+        margin-bottom: 30px;
+        text-shadow: 0 -2px 0 #000000, 0 -2px 0 #000000, 0 2px 0 #000000, 0 2px 0 #000000, -2px 0 0 #000000, 2px 0 0 #000000, -2px 0 0 #000000, 2px 0 0 #000000, -1px -2px 0 #000000, 1px -2px 0 #000000, -1px 2px 0 #000000, 1px 2px 0 #000000, -2px -1px 0 #000000, 2px -1px 0 #000000, -2px 1px 0 #000000, 2px 1px 0 #000000, -2px -2px 0 #000000, 2px -2px 0 #000000, -2px 2px 0 #000000, 2px 2px 0 #000000, -2px -2px 0 #000000, 2px -2px 0 #000000, -2px 2px 0 #000000, 2px 2px 0 #000000, 10px 10px 7px rgba(0, 0, 0, 0.75); }
+      .header__title p:nth-of-type(2) {
+        width: 500px;
+        font-size: 39px;
+        margin-bottom: 25px;
+        text-shadow: 0 -2px 0 #000000, 0 -2px 0 #000000, 0 2px 0 #000000, 0 2px 0 #000000, -2px 0 0 #000000, 2px 0 0 #000000, -2px 0 0 #000000, 2px 0 0 #000000, -1px -2px 0 #000000, 1px -2px 0 #000000, -1px 2px 0 #000000, 1px 2px 0 #000000, -2px -1px 0 #000000, 2px -1px 0 #000000, -2px 1px 0 #000000, 2px 1px 0 #000000, -2px -2px 0 #000000, 2px -2px 0 #000000, -2px 2px 0 #000000, 2px 2px 0 #000000, -2px -2px 0 #000000, 2px -2px 0 #000000, -2px 2px 0 #000000, 2px 2px 0 #000000, 10px 10px 7px rgba(0, 0, 0, 0.75); }
+      .header__title p:nth-of-type(3) {
+        width: 600px;
+        font-size: 49px;
+        text-shadow: 0 -2px 0 #000000, 0 -2px 0 #000000, 0 2px 0 #000000, 0 2px 0 #000000, -2px 0 0 #000000, 2px 0 0 #000000, -2px 0 0 #000000, 2px 0 0 #000000, -1px -2px 0 #000000, 1px -2px 0 #000000, -1px 2px 0 #000000, 1px 2px 0 #000000, -2px -1px 0 #000000, 2px -1px 0 #000000, -2px 1px 0 #000000, 2px 1px 0 #000000, -2px -2px 0 #000000, 2px -2px 0 #000000, -2px 2px 0 #000000, 2px 2px 0 #000000, -2px -2px 0 #000000, 2px -2px 0 #000000, -2px 2px 0 #000000, 2px 2px 0 #000000, 10px 10px 7px rgba(0, 0, 0, 0.75); }
+  .header__form {
+    float: right;
+    padding: 20px 35px 25px; }
+
+.form {
+  width: 334px;
+  border: 1px solid #ffffff;
+  background-color: #5f3f2a;
+  text-align: center;
+  margin-right: 11px; }
+  .form__title {
+    font-size: 26px;
+    font-family: "Myriad Pro", sans-serif;
+    margin-bottom: 5px; }
+  .form__desc {
+    font-size: 20px;
+    font-family: "Myriad Pro", sans-serif;
+    margin-bottom: 17px; }
+  .form__input {
+    margin-bottom: 20px; }
+  .form__button {
+    margin-top: 40px;
+    width: 180px; }
+
+.input {
+  border: 3px solid #b66d3b;
+  -webkit-box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.75);
+          box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.75);
+  background: transparent;
+  position: relative;
+  -webkit-border-radius: 2px;
+          border-radius: 2px; }
+  .input img {
+    position: absolute;
+    left: 8px;
+    top: 6px; }
+  .input input {
+    display: block;
+    background: transparent;
+    padding: 9.5px 15px 9.5px 39px;
+    color: white;
+    font-family: "AGOpus", sans-serif; }
+    .input input:placeholder {
+      color: #979796; }
+  .input_email img {
+    top: 11px; }
+
+.button {
+  display: block;
+  font-family: "Myriad Pro", sans-serif;
+  color: white;
+  text-transform: uppercase;
+  background-color: #311f15;
+  font-weight: 700;
+  padding-top: 14px;
+  padding-bottom: 10px; }
+  .button:hover {
+    background-color: #0d0806; }
+
+.title {
+  text-align: center;
+  font-size: 44px;
+  text-shadow: -0 -1px 0 #fff, 0 -1px 0 #fff, -0  1px 0 #fff, 0  1px 0 #fff, -1px -0 0 #fff, 1px -0 0 #fff, -1px  0 0 #fff, 1px  0 0 #fff, -1px -1px 0 #fff, 1px -1px 0 #fff, -1px  1px 0 #fff, 1px  1px 0 #fff, -1px -1px 0 #fff, 1px -1px 0 #fff, -1px  1px 0 #fff, 1px  1px 0 #fff, -1px -1px 0 #fff, 1px -1px 0 #fff, -1px  1px 0 #fff, 1px  1px 0 #fff, -1px -1px 0 #fff, 1px -1px 0 #fff, -1px  1px 0 #fff, 1px  1px 0 #fff; }
+
+.catalog {
+  position: relative;
+  z-index: 2;
+  margin-top: -8px;
+  background: url("../../img/pattern.png") center;
+  padding-top: 45px;
+  padding-bottom: 40px; }
+  .catalog__title {
+    margin-bottom: 20px; }
+  .catalog__item {
+    color: white;
+    width: 293px;
+    border: 1px solid #ffffff;
+    background-color: #5f3f2a;
+    margin-left: 17px;
+    margin-right: 17px;
+    padding: 34px 0 24px; }
+  .catalog__subtitle {
+    max-width: 210px;
+    margin-left: auto;
+    margin-right: auto;
+    font-size: 32px;
+    margin-bottom: 20px; }
+  .catalog__image {
+    margin-bottom: 17px;
+    position: relative; }
+    .catalog__image:before {
+      content: '';
+      top: 25px;
+      left: 35px;
+      position: absolute;
+      width: 224px;
+      height: 229px;
+      background-color: #bdbdbd; }
+    .catalog__image img {
+      z-index: 2;
+      position: relative;
+      margin-left: auto;
+      margin-right: auto; }
+  .catalog__price {
+    font-size: 32px;
+    margin-bottom: 25px; }
+  .catalog__button {
+    width: 180px;
+    font-size: 21px;
+    padding-top: 11px;
+    padding-bottom: 7px; }
+  .catalog__desc {
+    margin-top: 69px;
+    margin-bottom: 10px; }
+  .catalog__link {
+    width: 910px;
+    background: rgba(255, 255, 255, 0.5);
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center; }
+
+.link {
+  padding-top: 4px;
+  padding-bottom: 4px; }
+  .link__text, .link__button {
+    display: inline-block;
+    vertical-align: middle; }
+  .link__text {
+    position: relative;
+    font-size: 39px;
+    color: #1c1c1c;
+    position: relative;
+    top: 4px; }
+  .link__button {
+    width: 180px;
+    margin-left: 10px;
+    font-size: 21px; }
+
+.about {
+  z-index: 5;
+  position: relative;
+  margin-top: -11px;
+  padding-top: 32px;
+  padding-bottom: 55px;
+  background: url("../../img/about.png") no-repeat center top; }
+  .about__title {
+    margin-bottom: 40px;
+    color: white;
+    text-shadow: 4px 4px 13px rgba(0, 0, 0, 0.75); }
+  .about__image {
+    margin-left: -75px;
+    margin-right: -50px;
+    width: 612px; }
+    .about__image img {
+      z-index: 1;
+      position: relative; }
+  .about__text {
+    margin-top: 5px;
+    font-size: 25px;
+    font-family: "Myriad Pro", sans-serif;
+    background: rgba(255, 255, 255, 0.6);
+    width: 475px;
+    padding: 10px 16px 20px 22px;
+    text-align: justify;
+    margin-right: 30px; }
+    .about__text p {
+      z-index: 2;
+      position: relative;
+      margin-bottom: 25px; }
+      .about__text p:last-of-type {
+        margin-bottom: 0; }
+
+.advantages__head {
+  margin-top: -10px;
+  padding-top: 40px;
+  padding-bottom: 29px;
+  background: url("../../img/pattern.png") center; }
+
+.advantages__body {
+  position: relative;
+  z-index: 5;
+  height: 836px;
+  margin-top: -9px;
+  background: url("../../img/tree.png") no-repeat center top; }
+
+.advantages__list {
+  position: relative; }
+
+.advantages__item {
+  position: absolute; }
+  .advantages__item:nth-of-type(1) {
+    top: 24px;
+    right: 75px;
+    width: 612px; }
+    .advantages__item:nth-of-type(1) .advantages__content {
+      padding-right: 120px; }
+    .advantages__item:nth-of-type(1) .advantages__icon {
+      right: -38px;
+      top: 2px; }
+  .advantages__item:nth-of-type(2) {
+    top: 255px;
+    left: 0px;
+    width: 300px; }
+    .advantages__item:nth-of-type(2) .advantages__icon {
+      right: 50%;
+      margin-right: -75px;
+      top: -140px; }
+  .advantages__item:nth-of-type(3) {
+    top: 350px;
+    right: 15px;
+    width: 400px; }
+    .advantages__item:nth-of-type(3) .advantages__icon {
+      right: -24px;
+      top: -115px; }
+  .advantages__item:nth-of-type(4) {
+    top: 597px;
+    left: 0px;
+    width: 340px; }
+    .advantages__item:nth-of-type(4) .advantages__icon {
+      right: 20px;
+      top: -115px; }
+  .advantages__item:nth-of-type(5) {
+    top: 645px;
+    right: 10px;
+    width: 625px; }
+    .advantages__item:nth-of-type(5) .advantages__icon {
+      right: 90px;
+      top: -115px; }
+
+.advantages__icon {
+  position: absolute;
+  width: 150px;
+  height: 150px;
+  line-height: 142px;
+  border: 4px solid #000000;
+  background-color: #ffffff;
+  text-align: center;
+  -webkit-border-radius: 50%;
+          border-radius: 50%; }
+  .advantages__icon img {
+    display: inline-block;
+    vertical-align: middle; }
+
+.advantages__content {
+  padding: 12px 15px 12px;
+  background: rgba(255, 255, 255, 0.65); }
+
+.advantages__text {
+  font-size: 19px; }
+
+.advantages__subtitle {
+  font-size: 28px;
+  margin-bottom: 7px; }
+
+.advantages__footer {
+  margin-top: -9px;
+  z-index: 3;
+  height: 60px;
+  background: url("../../img/pattern.png") center; }
+
+.how {
+  position: relative;
+  z-index: 2;
+  background: url("../../img/triangles.png") repeat-x center top, url("../../img/triangles.png") repeat-x center bottom;
+  margin-top: -9px;
+  padding-top: 27px; }
+  .how__title {
+    margin-bottom: 26px; }
