--- a/app/template/styles/sass/style.sass
+++ b/app/template/styles/sass/style.sass
@@ -1,6 +1,6 @@
 /* Including styles files */
 @import sprite.sass
-
+@import ../../libs/fancybox/dist/jquery.fancybox.css
 
 /* Including fonts */
 @font-face
@@ -128,6 +128,8 @@ img
 		width: (100% / 4)
 	&-5
 		width: (100% / 5)
+	&-6
+		width: (100% / 6)
  
 
 	
@@ -300,10 +302,11 @@ img
 		top: 6px
 	input
 		display: block
-		background: transparent
+		background-color: #5f3f2a
 		padding: 9.5px 15px 9.5px 39px
 		color: white
 		font-family: $font-family-3
+		width: 100%
 		&:placeholder
 			color: #979796
 	&_email
@@ -538,9 +541,155 @@ img
 
 .how
 	position: relative
-	z-index: 2
+	z-index: 3
 	background: url('../../img/triangles.png') repeat-x center top, url('../../img/triangles.png') repeat-x center bottom
 	margin-top: -9px
 	padding-top: 27px
+	padding-bottom: 30px
 	&__title
 		margin-bottom: 26px
+	&__list
+		margin-left: 29px
+		margin-right: 29px
+	&__item
+		position: relative
+		&:before
+			z-index: 3
+			position: absolute
+			display: block
+			content: ''
+			width: 151px
+			height: 150px
+			left: 50%
+			margin-left: -78px
+			background: url('../../img/item.png')
+		&:after
+			z-index: 2
+			position: absolute
+			display: block
+			content: ''
+			width: 46px
+			height: 144px
+			background: url('../../img/4gon.png')
+			right: -17px
+			top: 2px
+		&:last-of-type
+			&:after
+				display: none
+	&__wrap
+		position: relative
+		z-index: 5
+		text-align: center
+		height: 150px
+	&__num
+		height: 62px
+		padding-top: 13px
+		font-size: 48px
+		color: white
+		padding-left: 10px
+	&__icon
+		line-height: 88px
+		text-align: center
+		padding-right: 10px
+		img
+			display: inline-block
+			vertical-align: middle
+	&__text
+		font-size: 21px
+		padding-right: 25px
+		padding-top: 17px
+
+	&__block
+		margin-top: 30px
+		width: 585px
+		margin-left: auto
+		margin-right: auto
+	&__subtitle
+		font-size: 40px
+		text-align: center
+	&__content
+		font-size: 21px
+
+
+.form-block
+	position: relative
+	z-index: 2
+	color: white
+	margin-top: -9px
+	height: 340px
+	background: url('../../img/board.png') no-repeat center top
+	&__image
+		padding-top: 25px
+		margin-left: 37px
+	&__title
+		text-align: center
+		font-size: 28px
+		padding-top: 58px
+		margin-bottom: 42px
+	&__form
+		width: 620px
+		margin-right: 30px
+		.row
+			margin-bottom: 25px
+		.form
+			background: none
+			border: none
+			width: 100%
+		.input
+			margin-bottom: 0
+		.col
+			padding-left: 24px
+			padding-right: 24px
+		.button
+			margin-top: 0
+			width: 100%
+			font-size: 21px
+			border: 1px solid #ffffff
+			padding-top: 9px
+			padding-bottom: 7px
+
+
+
+.footer
+	padding-top: 39px
+	margin-top: -9px
+	z-index: 1
+	position: relative
+	background: url('../../img/footer.png') no-repeat center bottom
+	&__nav, &__phone
+		vertical-align: middle
+	&__nav
+		li
+			margin-left: 14px
+			margin-right: 14px
+		a
+			text-shadow: -0 -1px 0 #fff, 0 -1px 0 #fff, -0  1px 0 #fff, 0  1px 0 #fff, -1px -0 0 #fff, 1px -0 0 #fff, -1px  0 0 #fff, 1px  0 0 #fff, -1px -1px 0 #fff, 1px -1px 0 #fff, -1px  1px 0 #fff, 1px  1px 0 #fff, -1px -1px 0 #fff, 1px -1px 0 #fff, -1px  1px 0 #fff, 1px  1px 0 #fff, -1px -1px 0 #fff, 1px -1px 0 #fff, -1px  1px 0 #fff, 1px  1px 0 #fff, -1px -1px 0 #fff, 1px -1px 0 #fff, -1px  1px 0 #fff, 1px  1px 0 #fff
+
+	&__phone
+		margin-left: -30px
+		img
+			margin-right: -40px
+			margin-top: -45px
+			margin-bottom: -45px
+		a
+			text-shadow: -0 -1px 0 #fff, 0 -1px 0 #fff, -0  1px 0 #fff, 0  1px 0 #fff, -1px -0 0 #fff, 1px -0 0 #fff, -1px  0 0 #fff, 1px  0 0 #fff, -1px -1px 0 #fff, 1px -1px 0 #fff, -1px  1px 0 #fff, 1px  1px 0 #fff, -1px -1px 0 #fff, 1px -1px 0 #fff, -1px  1px 0 #fff, 1px  1px 0 #fff, -1px -1px 0 #fff, 1px -1px 0 #fff, -1px  1px 0 #fff, 1px  1px 0 #fff, -1px -1px 0 #fff, 1px -1px 0 #fff, -1px  1px 0 #fff, 1px  1px 0 #fff
+	
+	&__middle
+		margin-top: 20px
+		margin-bottom: 20px
+
+	&__bottom
+		font-size: 18px
+		text-align: center
+
+	&__counters
+		text-align: center
+		width: 190px
+		img
+			margin-left: auto
+			margin-right: auto
+	&__viber
+		margin-bottom: 13px
+
+.color-red
+	color: #fe0000
